# AEGIS

./: .gitattributes  .gitignore  AEGIS_IMPLEMENTATION_PLAN.md  CHANGELOG-v6.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  ROADMAP-V7.md  SECURITY.md  aegis-spec.md  aegis-test-plan.md  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  fuzz.yml  scorecards.yml
.opencode/plans/: implementation-plan.md
aegis-go/: aegis.go  aegis_test.go  go.mod
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: main.rs  repl.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/benches/: cache.rs  check.rs  explain.rs  list.rs  memory.rs  partition.rs  write.rs
crates/aegis-core/fuzz/: Cargo.toml
crates/aegis-core/fuzz/fuzz_targets/: schema_parser.rs  tuple_input.rs
crates/aegis-core/src/: error.rs  lib.rs  telemetry.rs
crates/aegis-core/src/engine/: acl.rs  cache.rs  condition.rs  crdt.rs  enforcement_history.rs  gdpr.rs  hierarchy.rs  hooks.rs  hot_reload.rs  migration.rs  mod.rs  partition.rs  policy.rs  policy_lifecycle.rs  ratelimit.rs  rbac.rs  scheduler.rs  traversal.rs  watch.rs
crates/aegis-core/src/engine/analysis/: graph.rs  mod.rs  simulate.rs
crates/aegis-core/src/schema/: mod.rs  parser.rs  types.rs  validator.rs
crates/aegis-core/src/storage/: async_traits.rs  indexeddb.rs  memory.rs  mod.rs  mysql.rs  postgres.rs  rocksdb.rs  sqlite.rs  traits.rs
crates/aegis-core/src/testing/: fixtures.rs  mod.rs
crates/aegis-core/src/types/: analysis.rs  identity.rs  mod.rs  revision.rs  schema.rs  tuple.rs
crates/aegis-core/src/util/: redact.rs
crates/aegis-core/tests/: multitenancy.rs  persistence.rs  security.rs  soak.rs  stress.rs  v1_closure.rs  v2_multi_model.rs
crates/aegis-ffi/: Cargo.toml  README.md  aegis_ffi.h
crates/aegis-ffi/src/: aegis.h  lib.rs
crates/aegis-go/: README.md  aegis.go  aegis_test.go  go.mod
crates/aegis-napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/aegis-napi/scripts/: copy-napi.js
crates/aegis-napi/src/: lib.rs
crates/aegis-pyo3/: Cargo.toml  README.md  pyproject.toml
crates/aegis-pyo3/aegis/: __init__.py
crates/aegis-pyo3/src/: lib.rs
crates/aegis-test-utils/: Cargo.toml
crates/aegis-test-utils/src/: lib.rs
docs/: architecture.md  capacity-planning.md  enterprise-operations.md
examples/github-rebac/: README.md  instrumentation.ts  next.config.ts  package-lock.json  package.json
examples/github-rebac/app/: globals.css  layout.tsx  page.tsx
examples/github-rebac/app/actor/: page.tsx
examples/github-rebac/app/analysis/: page.tsx
examples/github-rebac/app/api/actor/: route.ts
examples/github-rebac/app/api/analysis/: route.ts
examples/github-rebac/app/api/audit/: route.ts
examples/github-rebac/app/api/backup/: route.ts
examples/github-rebac/app/api/cache/: route.ts
examples/github-rebac/app/api/check/: route.ts
examples/github-rebac/app/api/check-with-context/: route.ts
examples/github-rebac/app/api/discovery/: route.ts
examples/github-rebac/app/api/enforcement/: route.ts
examples/github-rebac/app/api/entities/: route.ts
examples/github-rebac/app/api/errors/: route.ts
examples/github-rebac/app/api/events/: route.ts
examples/github-rebac/app/api/explain/: route.ts
examples/github-rebac/app/api/explain-v2/: route.ts
examples/github-rebac/app/api/export/: route.ts
examples/github-rebac/app/api/graph/: route.ts
examples/github-rebac/app/api/health/: route.ts
examples/github-rebac/app/api/list/: route.ts
examples/github-rebac/app/api/partitions/: route.ts
examples/github-rebac/app/api/policies/: route.ts
examples/github-rebac/app/api/query/: route.ts
examples/github-rebac/app/api/rate-limiter/: route.ts
examples/github-rebac/app/api/reset/: route.ts
examples/github-rebac/app/api/scheduler/: route.ts
examples/github-rebac/app/api/schema/: route.ts
examples/github-rebac/app/api/seed/: route.ts
examples/github-rebac/app/api/simulate/: route.ts
examples/github-rebac/app/api/transaction/: route.ts
examples/github-rebac/app/api/tuples/: route.ts
examples/github-rebac/app/api/who-can-access/: route.ts
examples/github-rebac/app/audit/: page.tsx
examples/github-rebac/app/backup/: page.tsx
examples/github-rebac/app/check/: page.tsx
examples/github-rebac/app/check-with-context/: page.tsx
examples/github-rebac/app/components/: Sidebar.tsx  TypeCards.tsx
examples/github-rebac/app/enforcement/: page.tsx
examples/github-rebac/app/entities/: page.tsx
examples/github-rebac/app/errors/: page.tsx
examples/github-rebac/app/events/: page.tsx
examples/github-rebac/app/explain/: page.tsx
examples/github-rebac/app/export/: page.tsx
examples/github-rebac/app/graph/: page.tsx
examples/github-rebac/app/partitions/: page.tsx
examples/github-rebac/app/policies/: page.tsx
examples/github-rebac/app/rate-limiter/: page.tsx
examples/github-rebac/app/scheduler/: page.tsx
examples/github-rebac/app/schema/: page.tsx
examples/github-rebac/app/simulate/: page.tsx
examples/github-rebac/app/tuples/: page.tsx
examples/github-rebac/app/who-can-access/: page.tsx
examples/github-rebac/lib/: engine.ts  errors.ts  schema.ts  seed.ts  tenants.ts  useDiscovery.ts
examples/github-rebac/scripts/: copy-native.js
examples/go/: main.go
examples/node/: index.js  package.json
examples/node-v7/: index.js
examples/python/: main.py
examples/python-v7/: main.py
examples/wasm-demo/: Cargo.toml
examples/wasm-demo/src/: lib.rs
