[workspace]
resolver = "2"
members = [
    "crates/aegis-core",
    "crates/aegis-cli",
    "crates/aegis-napi",
    "crates/aegis-test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/aegis-auth/aegis"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34"
serde_json = "1"
rocksdb = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "registry"] }
opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["grpc-tonic", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.32"
libc = "0.2"
