[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Aegis authorization engine CLI"

[dependencies]
aegis-core = { path = "../aegis-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
rustyline = "14"
dirs = "5"
