[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Aegis authorization engine CLI"

[dependencies]
aegis-core = { path = "../aegis-core" }
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml.workspace = true
anyhow = "1"
rustyline = "14"
dirs = "5"

[features]
rocksdb = ["aegis-core/rocksdb"]
