[package]
name = "aegis-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Aegis C FFI bindings for cross-language SDKs (Go, Zig, etc.)"

[dependencies]
aegis-core = { path = "../aegis-core" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "aegis_ffi"
crate-type = ["cdylib", "staticlib"]
