[package]
name = "aegis-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Aegis NAPI bindings for Node.js"

[build-dependencies]
napi-build = "2"

[dependencies]
aegis-core = { path = "../aegis-core" }
chrono = "0.4"
napi = { version = "2", features = ["napi8", "serde-json"] }
napi-derive = "2"
serde_json.workspace = true

[lib]
crate-type = ["cdylib"]
