[package]
name = "aegis-pyo3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Aegis Python bindings via PyO3"

[lib]
crate-type = ["cdylib"]

[dependencies]
aegis-core = { path = "../aegis-core" }
pyo3 = { workspace = true }
chrono = "0.4"
serde_json = "1"
