[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aegis-auth"
version = "0.1.0"
requires-python = ">=3.9"
description = "Aegis embedded authorization runtime — Python bindings"
license = { text = "Apache-2.0" }

[tool.maturin]
features = ["pyo3/experimental-async"]
module-name = "aegis"
