[package]
name = "aegis-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Test utilities for the Aegis authorization runtime"
authors = ["Aegis Authors <opensource@aegis-auth.dev>"]
homepage = "https://github.com/aegis-auth/aegis"
documentation = "https://docs.rs/aegis-test-utils"
readme = "README.md"
keywords = ["authorization", "rebac", "zanzibar", "access-control", "security"]
categories = ["authentication", "database"]

[dependencies]
aegis-core = { path = "../aegis-core", features = ["test-utils"] }
