[package]
name = "aegis-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
aegis-core = { path = ".." }

[[bin]]
name = "schema_parser"
path = "fuzz_targets/schema_parser.rs"

[[bin]]
name = "tuple_input"
path = "fuzz_targets/tuple_input.rs"
